Mixins Spacing Rem Fix Grid

--- a/assets/scss/5-components/container.scss
+++ b/assets/scss/5-components/container.scss
@@ -1,32 +1,76 @@
+.row {
+  display: flex;
+  flex-wrap: wrap;
+
+  &.justify-evenly {
+    justify-content: space-evenly;
+  }
+
+  .col-1 {
+    flex: 0 0 8.333333%;
+    max-width: 8.333333%;
+  }
+
+  .col-2 {
+    flex: 0 0 16.666667%;
+    max-width: 16.666667%;
+  }
+
+  .col-3 {
+    flex: 0 0 25%;
+    max-width: 25%;
+  }
+
+  .col-4 {
+    flex: 0 0 33.333333%;
+    max-width: 33.333333%;
+  }
+
+  .col-5 {
+    flex: 0 0 41.666667%;
+    max-width: 41.666667%;
+  }
+
+  .col-6 {
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+
+  .col-7 {
+    flex: 0 0 58.333333%;
+    max-width: 58.333333%;
+  }
+
+  .col-8 {
+    flex: 0 0 66.666667%;
+    max-width: 66.666667%;
+  }
+
+  .col-9 {
+    flex: 0 0 75%;
+    max-width: 75%;
+  }
+
+  .col-10 {
+    flex: 0 0 83.333333%;
+    max-width: 83.333333%;
+  }
+
+  .col-11 {
+    flex: 0 0 91.666667%;
+    max-width: 91.666667%;
+  }
+
+  .col-12 {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+}
 .container {
   margin: 30px 80px;
 
   &.flex {
     display: flex;
-  }
-
-  .row {
-    display: flex;
-
-    &.justify-evenly {
-      justify-content: space-evenly;
-    }
-
-    .col-3 {
-      width: 33.33%;
-    }
-
-    .col-4 {
-      width: 25%;
-    }
-
-    .col-6 {
-      width: 50%;
-    }
-
-    .col-12 {
-      width: 100%;
-    }
   }
 
   /* Ap Information */
@@ -59,6 +103,8 @@
     background: #f7ffdc;
   }
 }
+
+/* Container Video */
 .video-container {
   padding: 80px 15%;
   text-align: center;
@@ -75,4 +121,10 @@
     color: #4f4d4e;
     margin: 20px 0px;
   }
+}
+
+/* Container App Featured */
+
+.app-featured-container {
+  padding: 20px;
 }
